--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -29,6 +29,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#team">Our Team</a></li>
                     <li><a href="#services">Services</a></li>
+                    <li><a href="#testimonials">Testimonials</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -247,10 +248,10 @@
             <!-- CoreLift Service -->
             <div id="corelift" class="service-box">
                 <div class="service-image">
-                    <div class="video-placeholder">
-                        <img src="CoreLift_Confidence_with_Emsella.png" alt="CoreLift">
-                        <div class="video-badge">📹 Video Coming Soon</div>
-                    </div>
+                    <video controls poster="Dr_Tess_Emsella.png">
+                        <source src="Dr_Tess_Video.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
                 </div>
                 <div class="service-content">
                     <h3>CoreLift Pelvic Health</h3>
@@ -336,66 +337,16 @@
                 </div>
             </div>
 
-            <!-- Wellness Coaching Service -->
-            <div id="wellness-coaching" class="service-box">
-                <div class="service-image">
-                    <img src="Gigi_left.png" alt="Wellness Coaching with Gigi">
-                </div>
-                <div class="service-content">
-                    <h3>Wellness Coaching</h3>
-                    <div class="service-short">
-                        <p><strong>Personalized wellness coaching to support your health journey.</strong> Gigi provides compassionate coaching for lifestyle changes, healthy habits, and holistic wellness.</p>
-                    </div>
-                    <div class="service-full hidden">
-                        <p><strong>What is Wellness Coaching?</strong></p>
-                        <p>Wellness coaching is a collaborative partnership between you and Gigi, designed to help you achieve your health and lifestyle goals. Unlike traditional medical treatment that focuses on disease, wellness coaching focuses on optimizing your overall well-being and preventing future health problems.</p>
-
-                        <p><strong>How Wellness Coaching Works:</strong></p>
-                        <p>Gigi works alongside Dr. Garcia to provide comprehensive support for your health journey. While Dr. Garcia handles the medical aspects of your care, Gigi helps you implement lifestyle changes, stay accountable to your goals, and navigate the challenges of creating lasting healthy habits.</p>
-
-                        <p><strong>Services Provided:</strong></p>
-                        <ul class="service-benefits">
-                            <li><strong>One-on-One Coaching Sessions:</strong> Personalized guidance tailored to your unique needs and goals</li>
-                            <li><strong>Lifestyle & Behavior Change Support:</strong> Help implementing changes recommended by Dr. Garcia</li>
-                            <li><strong>Nutrition Guidance:</strong> Healthy eating strategies and meal planning support</li>
-                            <li><strong>Stress Management:</strong> Techniques for reducing stress and improving mental well-being</li>
-                            <li><strong>Exercise & Movement:</strong> Support for starting and maintaining an exercise program</li>
-                            <li><strong>Accountability & Motivation:</strong> Regular check-ins to keep you on track</li>
-                            <li><strong>Goal Setting:</strong> Help defining and achieving realistic, sustainable health goals</li>
-                            <li><strong>Integration with gigiSafeHOUSE:</strong> Access to additional community resources</li>
-                        </ul>
-
-                        <p><strong>Who Benefits from Wellness Coaching?</strong></p>
-                        <ul class="service-benefits">
-                            <li>Anyone wanting to improve their overall health and well-being</li>
-                            <li>Patients in our weight management program (coaching included)</li>
-                            <li>People managing chronic conditions like diabetes or heart disease</li>
-                            <li>Individuals recovering from illness or injury</li>
-                            <li>Those looking to prevent future health problems</li>
-                            <li>Anyone feeling overwhelmed by health recommendations</li>
-                        </ul>
-
-                        <p><strong>Gigi's Approach:</strong></p>
-                        <p>Gigi brings a compassionate, non-judgmental approach to wellness coaching. Having personally lost 70 pounds alongside Dr. Tess, she understands the challenges of making significant lifestyle changes. As the founder of gigiSafeHOUSE, she is passionate about making health accessible and achievable for everyone, regardless of their starting point or circumstances.</p>
-
-                        <p><strong>Coaching in Action:</strong></p>
-                        <p>In our weight management program, Gigi provides biweekly coaching sessions that complement Dr. Garcia's counseling. She helps you implement the changes that Dr. Tess assigns during counseling sessions. Since an exercise program is also part of our weight management program, Gigi helps you begin that process and continue it should you become unmotivated throughout the program.</p>
-                        <p class="service-cta">Let Gigi support you on your journey to better health and wellness. Contact us to learn more!</p>
-                    </div>
-                    <button class="read-more-toggle" onclick="toggleReadMore(this)">Read More</button>
-                </div>
-            </div>
-
             <!-- Weight Management Service -->
             <div id="weight-management" class="service-box special-box">
                 <div class="special-ribbon">
                     <span>First Month $27!</span>
                 </div>
                 <div class="service-image">
-                    <img src="wm14_png.jpg" alt="Weight Management">
+                    <img src="wm14_png.jpg" alt="Medical Weight Management">
                 </div>
                 <div class="service-content">
-                    <h3>Weight Management</h3>
+                    <h3>Medical Weight Management</h3>
                     <div class="service-short">
                         <p><strong>Achieving sustainable, long-term health through comprehensive physician-supervised weight management.</strong> This is not a quick fix—it's a commitment to lasting change.</p>
                     </div>
@@ -442,6 +393,56 @@
                         <p><strong>Compassion and Acceptance:</strong></p>
                         <p>We believe that any weight management program that perpetuates feelings of shame or failure should not be in business. Compassion and acceptance are major parts of our weight management program. We do not allow you to be alone on your weight loss journey.</p>
                         <p class="service-cta">Start your transformation today with our special $27 first month offer!</p>
+                    </div>
+                    <button class="read-more-toggle" onclick="toggleReadMore(this)">Read More</button>
+                </div>
+            </div>
+
+            <!-- Wellness Coaching Service -->
+            <div id="wellness-coaching" class="service-box">
+                <div class="service-image">
+                    <img src="Gigi_left.png" alt="Wellness Coaching with Gigi">
+                </div>
+                <div class="service-content">
+                    <h3>Wellness Coaching</h3>
+                    <div class="service-short">
+                        <p><strong>Personalized wellness coaching to support your health journey.</strong> Gigi provides compassionate coaching for lifestyle changes, healthy habits, and holistic wellness.</p>
+                    </div>
+                    <div class="service-full hidden">
+                        <p><strong>What is Wellness Coaching?</strong></p>
+                        <p>Wellness coaching is a collaborative partnership between you and Gigi, designed to help you achieve your health and lifestyle goals. Unlike traditional medical treatment that focuses on disease, wellness coaching focuses on optimizing your overall well-being and preventing future health problems.</p>
+
+                        <p><strong>How Wellness Coaching Works:</strong></p>
+                        <p>Gigi works alongside Dr. Garcia to provide comprehensive support for your health journey. While Dr. Garcia handles the medical aspects of your care, Gigi helps you implement lifestyle changes, stay accountable to your goals, and navigate the challenges of creating lasting healthy habits.</p>
+
+                        <p><strong>Services Provided:</strong></p>
+                        <ul class="service-benefits">
+                            <li><strong>One-on-One Coaching Sessions:</strong> Personalized guidance tailored to your unique needs and goals</li>
+                            <li><strong>Lifestyle & Behavior Change Support:</strong> Help implementing changes recommended by Dr. Garcia</li>
+                            <li><strong>Nutrition Guidance:</strong> Healthy eating strategies and meal planning support</li>
+                            <li><strong>Stress Management:</strong> Techniques for reducing stress and improving mental well-being</li>
+                            <li><strong>Exercise & Movement:</strong> Support for starting and maintaining an exercise program</li>
+                            <li><strong>Accountability & Motivation:</strong> Regular check-ins to keep you on track</li>
+                            <li><strong>Goal Setting:</strong> Help defining and achieving realistic, sustainable health goals</li>
+                            <li><strong>Integration with gigiSafeHOUSE:</strong> Access to additional community resources</li>
+                        </ul>
+
+                        <p><strong>Who Benefits from Wellness Coaching?</strong></p>
+                        <ul class="service-benefits">
+                            <li>Anyone wanting to improve their overall health and well-being</li>
+                            <li>Patients in our weight management program (coaching included)</li>
+                            <li>People managing chronic conditions like diabetes or heart disease</li>
+                            <li>Individuals recovering from illness or injury</li>
+                            <li>Those looking to prevent future health problems</li>
+                            <li>Anyone feeling overwhelmed by health recommendations</li>
+                        </ul>
+
+                        <p><strong>Gigi's Approach:</strong></p>
+                        <p>Gigi brings a compassionate, non-judgmental approach to wellness coaching. Having personally lost 70 pounds alongside Dr. Tess, she understands the challenges of making significant lifestyle changes. As the founder of gigiSafeHOUSE, she is passionate about making health accessible and achievable for everyone, regardless of their starting point or circumstances.</p>
+
+                        <p><strong>Coaching in Action:</strong></p>
+                        <p>In our weight management program, Gigi provides biweekly coaching sessions that complement Dr. Garcia's counseling. She helps you implement the changes that Dr. Tess assigns during counseling sessions. Since an exercise program is also part of our weight management program, Gigi helps you begin that process and continue it should you become unmotivated throughout the program.</p>
+                        <p class="service-cta">Let Gigi support you on your journey to better health and wellness. Contact us to learn more!</p>
                     </div>
                     <button class="read-more-toggle" onclick="toggleReadMore(this)">Read More</button>
                 </div>
@@ -510,7 +511,7 @@
             <!-- DOT Physicals - SERVICE -->
             <div id="dot-physicals" class="service-box">
                 <div class="service-image">
-                    <img src="__semi_truck12_png.jpg" alt="DOT Physicals">
+                    <img src="semi_truck12_png.jpg" alt="DOT Physicals">
                 </div>
                 <div class="service-content">
                     <h3>DOT Physicals</h3>
@@ -607,7 +608,7 @@
             <!-- CareCredit Financing - SERVICE -->
             <div id="carecredit" class="service-box">
                 <div class="service-image">
-                    <img src="carecredit_financing.jpg" alt="CareCredit Financing">
+                    <img src="CareCredit.jpg" alt="CareCredit Financing">
                 </div>
                 <div class="service-content">
                     <h3>CareCredit® Financing - 0% Interest Available</h3>
@@ -662,6 +663,72 @@
                     <button class="read-more-toggle" onclick="toggleReadMore(this)">Read More</button>
                 </div>
             </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Video Testimonials Section -->
+    <section id="testimonials" class="testimonials-section">
+        <div class="container">
+            <h2 class="section-title">Hear From Our Patients</h2>
+            <p class="section-subtitle">Real stories from real people in our community</p>
+            
+            <div class="testimonials-grid">
+                <!-- Testimonial Video 1 -->
+                <div class="testimonial-card">
+                    <div class="testimonial-video">
+                        <video controls poster="testimonial_thumbnail1.jpg">
+                            <source src="testimonial_video1.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                    <div class="testimonial-info">
+                        <h4>Patient Success Story</h4>
+                        <p>Hear how our Direct Primary Care model changed their life</p>
+                    </div>
+                </div>
+
+                <!-- Testimonial Video 2 -->
+                <div class="testimonial-card">
+                    <div class="testimonial-video">
+                        <video controls poster="testimonial_thumbnail2.jpg">
+                            <source src="testimonial_video2.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                    <div class="testimonial-info">
+                        <h4>Weight Management Journey</h4>
+                        <p>A transformative experience with Dr. Tess and Gigi</p>
+                    </div>
+                </div>
+
+                <!-- Testimonial Video 3 -->
+                <div class="testimonial-card">
+                    <div class="testimonial-video">
+                        <video controls poster="testimonial_thumbnail3.jpg">
+                            <source src="testimonial_video3.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                    <div class="testimonial-info">
+                        <h4>CoreLift Results</h4>
+                        <p>Life-changing pelvic health treatment</p>
+                    </div>
+                </div>
+
+                <!-- Testimonial Video 4 -->
+                <div class="testimonial-card">
+                    <div class="testimonial-video">
+                        <video controls poster="testimonial_thumbnail4.jpg">
+                            <source src="testimonial_video4.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                    <div class="testimonial-info">
+                        <h4>Mental Health Support</h4>
+                        <p>Finding hope through compassionate care</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
