--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -667,6 +667,23 @@
         </div>
     </section>
 
+    <!-- TessTalk Section -->
+    <section id="tesstalk" class="tesstalk-section">
+        <div class="container">
+            <h2 class="section-title">TessTalk</h2>
+            <p class="section-subtitle">Insights and inspiration from Dr. Tess</p>
+            
+            <div class="tesstalk-content">
+                <div class="tesstalk-image">
+                    <img src="tesstalk.jpg" alt="TessTalk with Dr. Tess Garcia">
+                </div>
+                <div class="tesstalk-description">
+                    <p>Join Dr. Tess as she shares her wisdom on health, wellness, and living your best life. TessTalk brings you practical advice, medical insights, and compassionate guidance on the topics that matter most to your well-being.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Video Testimonials Section -->
     <section id="testimonials" class="testimonials-section">
         <div class="container">
