--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -248,10 +248,7 @@
             <!-- CoreLift Service -->
             <div id="corelift" class="service-box">
                 <div class="service-image">
-                    <video controls poster="Dr_Tess_Emsella.png">
-                        <source src="Dr_Tess_Video.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
+                    <img src="CoreLift_Confidence_with_Emsella.png" alt="CoreLift Emsella Chair">
                 </div>
                 <div class="service-content">
                     <h3>CoreLift Pelvic Health</h3>
@@ -691,27 +688,25 @@
             <p class="section-subtitle">Real stories from real people in our community</p>
             
             <div class="testimonials-grid">
-                <!-- Testimonial Video 1 -->
+                <!-- Testimonial 1 -->
                 <div class="testimonial-card">
-                    <div class="testimonial-video">
-                        <video controls poster="testimonial_thumbnail1.jpg">
-                            <source src="testimonial_video1.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
+                    <div class="testimonial-placeholder">
+                        <div class="placeholder-icon">🎥</div>
+                        <p>Patient Success Story</p>
+                        <p class="placeholder-subtext">Video testimonial coming soon</p>
                     </div>
                     <div class="testimonial-info">
-                        <h4>Patient Success Story</h4>
-                        <p>Hear how our Direct Primary Care model changed their life</p>
+                        <h4>Direct Primary Care Experience</h4>
+                        <p>Hear how our DPC model changed their life</p>
                     </div>
                 </div>
 
-                <!-- Testimonial Video 2 -->
+                <!-- Testimonial 2 -->
                 <div class="testimonial-card">
-                    <div class="testimonial-video">
-                        <video controls poster="testimonial_thumbnail2.jpg">
-                            <source src="testimonial_video2.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
+                    <div class="testimonial-placeholder">
+                        <div class="placeholder-icon">🎥</div>
+                        <p>Weight Management Success</p>
+                        <p class="placeholder-subtext">Video testimonial coming soon</p>
                     </div>
                     <div class="testimonial-info">
                         <h4>Weight Management Journey</h4>
@@ -719,30 +714,28 @@
                     </div>
                 </div>
 
-                <!-- Testimonial Video 3 -->
+                <!-- Testimonial 3 -->
                 <div class="testimonial-card">
-                    <div class="testimonial-video">
-                        <video controls poster="testimonial_thumbnail3.jpg">
-                            <source src="testimonial_video3.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
+                    <div class="testimonial-placeholder">
+                        <div class="placeholder-icon">🎥</div>
+                        <p>CoreLift Results</p>
+                        <p class="placeholder-subtext">Video testimonial coming soon</p>
                     </div>
                     <div class="testimonial-info">
-                        <h4>CoreLift Results</h4>
-                        <p>Life-changing pelvic health treatment</p>
+                        <h4>CoreLift Pelvic Health</h4>
+                        <p>Life-changing treatment results</p>
                     </div>
                 </div>
 
-                <!-- Testimonial Video 4 -->
+                <!-- Testimonial 4 -->
                 <div class="testimonial-card">
-                    <div class="testimonial-video">
-                        <video controls poster="testimonial_thumbnail4.jpg">
-                            <source src="testimonial_video4.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
+                    <div class="testimonial-placeholder">
+                        <div class="placeholder-icon">🎥</div>
+                        <p>Mental Health Support</p>
+                        <p class="placeholder-subtext">Video testimonial coming soon</p>
                     </div>
                     <div class="testimonial-info">
-                        <h4>Mental Health Support</h4>
+                        <h4>Mental Health Care</h4>
                         <p>Finding hope through compassionate care</p>
                     </div>
                 </div>
