--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -671,8 +671,15 @@
             <p class="section-subtitle">Insights and inspiration from Dr. Tess</p>
             
             <div class="tesstalk-content">
-                <div class="tesstalk-image">
-                    <img src="tesstalk.jpg" alt="TessTalk with Dr. Tess Garcia">
+                <div class="tesstalk-video">
+                    <!-- Replace YOUR_YOUTUBE_VIDEO_ID with actual YouTube video ID -->
+                    <iframe 
+                        src="https://www.youtube.com/embed/YOUR_TESSTALK_VIDEO_ID" 
+                        title="TessTalk with Dr. Tess Garcia" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allowfullscreen>
+                    </iframe>
                 </div>
                 <div class="tesstalk-description">
                     <p>Join Dr. Tess as she shares her wisdom on health, wellness, and living your best life. TessTalk brings you practical advice, medical insights, and compassionate guidance on the topics that matter most to your well-being.</p>
@@ -690,10 +697,15 @@
             <div class="testimonials-grid">
                 <!-- Testimonial 1 -->
                 <div class="testimonial-card">
-                    <div class="testimonial-placeholder">
-                        <div class="placeholder-icon">🎥</div>
-                        <p>Patient Success Story</p>
-                        <p class="placeholder-subtext">Video testimonial coming soon</p>
+                    <div class="testimonial-video-embed">
+                        <!-- Replace YOUR_VIDEO_ID_1 with actual YouTube video ID -->
+                        <iframe 
+                            src="https://www.youtube.com/embed/YOUR_VIDEO_ID_1" 
+                            title="DPC Patient Success Story" 
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                            allowfullscreen>
+                        </iframe>
                     </div>
                     <div class="testimonial-info">
                         <h4>Direct Primary Care Experience</h4>
@@ -703,10 +715,15 @@
 
                 <!-- Testimonial 2 -->
                 <div class="testimonial-card">
-                    <div class="testimonial-placeholder">
-                        <div class="placeholder-icon">🎥</div>
-                        <p>Weight Management Success</p>
-                        <p class="placeholder-subtext">Video testimonial coming soon</p>
+                    <div class="testimonial-video-embed">
+                        <!-- Replace YOUR_VIDEO_ID_2 with actual YouTube video ID -->
+                        <iframe 
+                            src="https://www.youtube.com/embed/YOUR_VIDEO_ID_2" 
+                            title="Weight Management Success" 
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                            allowfullscreen>
+                        </iframe>
                     </div>
                     <div class="testimonial-info">
                         <h4>Weight Management Journey</h4>
@@ -716,10 +733,15 @@
 
                 <!-- Testimonial 3 -->
                 <div class="testimonial-card">
-                    <div class="testimonial-placeholder">
-                        <div class="placeholder-icon">🎥</div>
-                        <p>CoreLift Results</p>
-                        <p class="placeholder-subtext">Video testimonial coming soon</p>
+                    <div class="testimonial-video-embed">
+                        <!-- Replace YOUR_VIDEO_ID_3 with actual YouTube video ID -->
+                        <iframe 
+                            src="https://www.youtube.com/embed/YOUR_VIDEO_ID_3" 
+                            title="CoreLift Results" 
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                            allowfullscreen>
+                        </iframe>
                     </div>
                     <div class="testimonial-info">
                         <h4>CoreLift Pelvic Health</h4>
@@ -729,10 +751,15 @@
 
                 <!-- Testimonial 4 -->
                 <div class="testimonial-card">
-                    <div class="testimonial-placeholder">
-                        <div class="placeholder-icon">🎥</div>
-                        <p>Mental Health Support</p>
-                        <p class="placeholder-subtext">Video testimonial coming soon</p>
+                    <div class="testimonial-video-embed">
+                        <!-- Replace YOUR_VIDEO_ID_4 with actual YouTube video ID -->
+                        <iframe 
+                            src="https://www.youtube.com/embed/YOUR_VIDEO_ID_4" 
+                            title="Mental Health Support" 
+                            frameborder="0" 
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                            allowfullscreen>
+                        </iframe>
                     </div>
                     <div class="testimonial-info">
                         <h4>Mental Health Care</h4>
