--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -296,7 +295,7 @@
                             <li><strong>Longer Appointments:</strong> 30-60 minute visits instead of rushed 10-minute appointments</li>
                             <li><strong>Affordable Lab Work:</strong> Labs at wholesale cost, no insurance markup</li>
                             <li><strong>Wholesale Medications:</strong> Many common medications at wholesale prices—often cheaper than insurance copays</li>
-                            <li><strong>Comprehensive Care:</strong> Mental health, chronic disease management, preventive care—all included</li>
+                            <li><strong>Comprehensive Primary Care:</strong> Chronic disease management, preventive care, acute illness treatment—all included</li>
                             <li><strong>No Insurance Required:</strong> Use DPC as your primary care or pair with a high-deductible catastrophic plan</li>
                         </ul>
 
@@ -305,13 +304,14 @@
                             <li>Annual wellness exams and preventive care</li>
                             <li>Sick visits for acute illnesses and injuries</li>
                             <li>Chronic disease management (diabetes, hypertension, high cholesterol, etc.)</li>
-                            <li>Mental health care and medication management</li>
                             <li>Women's health services</li>
-                            <li>Minor procedures and wound care</li>
+                            <li>Basic medication management</li>
                             <li>Care coordination with specialists</li>
-                            <li>Health coaching and lifestyle counseling</li>
                             <li>24/7 secure messaging with your care team</li>
                         </ul>
+
+                        <p><strong>Additional Services Available:</strong></p>
+                        <p>We also gladly offer specialized services beyond your DPC membership, including mental health care, minor procedures, and wellness coaching. Ask us about adding these services to enhance your care!</p>
 
                         <p><strong>Our Mission:</strong></p>
                         <p>At Garcia Family Medicine, we believe financial barriers should never stand between you and quality healthcare. Direct Primary Care allows us to serve our community—families, friends, neighbors, and especially our veterans—with the time, attention, and compassionate care everyone deserves. This is healthcare the way it was meant to be: personal, accessible, and focused entirely on YOU.</p>
@@ -475,7 +475,7 @@
             <!-- Wellness Coaching Service -->
             <div id="wellness-coaching" class="service-box">
                 <div class="service-image">
-                    <img src="Gigi_left.png" alt="Wellness Coaching with Gigi">
+                    <img src="gigi left.png" alt="Wellness Coaching with Gigi">
                 </div>
                 <div class="service-content">
                     <h3>Wellness Coaching</h3>
@@ -585,7 +585,7 @@
             <!-- DOT Physicals - SERVICE -->
             <div id="dot-physicals" class="service-box">
                 <div class="service-image">
-                    <img src="semi_truck12_png.jpg" alt="DOT Physicals">
+                    <img src="semi_truck12_png.jpg" alt="DOT Physicals" class="rotate-right">
                 </div>
                 <div class="service-content">
                     <h3>DOT Physicals</h3>
