--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -110,6 +110,16 @@
         </div>
     </header>
 
+    <!-- Spanish Language Banner -->
+    <div class="spanish-banner">
+        <div class="container">
+            <div class="banner-content">
+                <span class="banner-icon">🌎</span>
+                <span class="banner-text"><strong>Multicultural Care</strong> | Se Habla Español | Serving Our Diverse Community with Compassion</span>
+            </div>
+        </div>
+    </div>
+
     <!-- Hero Carousel -->
     <section id="home" class="hero-carousel">
         <!-- CoreLift Slide -->
@@ -138,7 +148,7 @@
             <div class="slide-content">
                 <h2>Medical Weight Management</h2>
                 <p>Achieving sustainable, long-term health</p>
-                <div class="special-badge">First Month Only $27!</div>
+                <div class="special-badge">$27 Special</div>
                 <button class="read-more-btn" onclick="location.href='#weight-management'">Learn More</button>
             </div>
         </div>
@@ -551,7 +561,7 @@
             <!-- Wellness Coaching Service -->
             <div id="wellness-coaching" class="service-box">
                 <div class="service-image">
-                    <img src="gigi left.png" alt="Wellness Coaching with Gigi">
+                    <img src="Gigi left.png" alt="Wellness Coaching with Gigi">
                 </div>
                 <div class="service-content">
                     <h3>Wellness Coaching</h3>
@@ -740,7 +750,7 @@
             <!-- Opioid-Free Pain Management - SERVICE -->
             <div id="pain-management" class="service-box">
                 <div class="service-image">
-                    <img src="pain_management.jpg" alt="Opioid-Free Pain Management">
+                    <img src="Pain_Mgmt.png" alt="Opioid-Free Pain Management">
                 </div>
                 <div class="service-content">
                     <h3>Comprehensive Opioid-Free Pain Management</h3>
@@ -784,7 +794,7 @@
             <!-- CareCredit Financing - SERVICE -->
             <div id="carecredit" class="service-box">
                 <div class="service-image">
-                    <img src="CareCredit.jpg" alt="CareCredit Financing">
+                    <img src="CareCredit.png" alt="CareCredit Financing">
                 </div>
                 <div class="service-content">
                     <h3>CareCredit® Financing - 0% Interest Available</h3>
