--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -50,7 +50,7 @@
             "addressRegion": "MO",
             "addressCountry": "US"
         },
-        "telephone": "Contact via website",
+        "telephone": "(816) 427-5320",
         "priceRange": "$$",
         "medicalSpecialty": ["Family Medicine", "Obesity Medicine", "Primary Care"],
         "availableService": [
@@ -262,7 +262,7 @@
                     <div class="team-info">
                         <h3>Marisela</h3>
                         <p class="team-title">Medical Assistant & Translator</p>
-                        <p class="team-bio">Marisela provides compassionate medical assistance and professional bilingual translation support to ensure all patients receive quality care in their preferred language. Her expertise in both clinical support and Spanish-English translation services helps bridge communication gaps and creates a welcoming environment for our diverse patient community.</p>
+                        <p class="team-bio">Coming soon! Marisela provides compassionate medical assistance and professional bilingual translation support to ensure all patients receive quality care in their preferred language. Her expertise in both clinical support and Spanish-English translation services helps bridge communication gaps and creates a welcoming environment for our diverse patient community.</p>
                     </div>
                 </div>
 
@@ -273,7 +273,7 @@
                     <div class="team-info">
                         <h3>Maria</h3>
                         <p class="team-title">Patient Services Coordinator</p>
-                        <p class="team-bio">Maria is the friendly voice you'll hear when you call Garcia Family Medicine. She ensures every patient interaction is warm and professional, coordinating appointments, answering questions, and making sure your experience with our practice is smooth from the very first call.</p>
+                        <p class="team-bio">Coming soon! Maria is the friendly voice you'll hear when you call Garcia Family Medicine. She ensures every patient interaction is warm and professional, coordinating appointments, answering questions, and making sure your experience with our practice is smooth from the very first call.</p>
                     </div>
                 </div>
             </div>
@@ -565,7 +565,7 @@
             <!-- Wellness Coaching Service -->
             <div id="wellness-coaching" class="service-box">
                 <div class="service-image">
-                    <img src="igi_left.png" alt="Wellness Coaching with Gigi">
+                    <img src="Gigi left.png" alt="Wellness Coaching with Gigi">
                 </div>
                 <div class="service-content">
                     <h3>Wellness Coaching</h3>
@@ -754,7 +754,7 @@
             <!-- Opioid-Free Pain Management - SERVICE -->
             <div id="pain-management" class="service-box">
                 <div class="service-image">
-                    <img src="Pain_Mgmt.png" alt="Opioid-Free Pain Management">
+                    <img src="Pain Mgmt.png" alt="Opioid-Free Pain Management">
                 </div>
                 <div class="service-content">
                     <h3>Comprehensive Opioid-Free Pain Management</h3>
