--- a/website_deploy/index.html
+++ b/website_deploy/index.html
@@ -95,6 +95,7 @@
                 <div class="header-text">
                     <h1>Garcia Family Medicine</h1>
                     <p class="tagline" data-translate="tagline">Treating the whole patient: Spirit, Body, and Soul</p>
+                    <p class="header-phone">📞 <a href="tel:816-427-5320">(816) 427-5320</a></p>
                 </div>
             </div>
             <nav>
@@ -225,6 +226,12 @@
                             <p class="team-bio">So, there it all is. Right here in Blue Springs, near to you, you have a family medicine physician, an obesity medicine specialist, a compassionate primary care physician, a board-certified family physician, a Mexican American physician, and a Native American physician, all at one convenient location. As a Direct Primary Care (DPC) physician, I am proud to offer a patient-first approach to medicine—one that eliminates the barriers of insurance, provides affordable membership-based healthcare, and ensures my patients receive the time, attention, and personalized care they deserve. My mission is simple: to listen, to heal, and to serve.</p>
                         </div>
                         <button class="read-more-toggle" onclick="toggleTeamBio(this)">Read More</button>
+                        
+                        <!-- Dr. Tess Highlight Box -->
+                        <div class="dr-tess-highlight">
+                            <h4>My Journey to Medicine</h4>
+                            <p>"How did I get from music teacher to family doctor? It was sudden when my mother called me on Halloween 1993 and asked me why I wasn't in medical school, but within a week, I was enrolled for the next semester taking prerequisite coursework. Operating at the same breakneck speed, I took the MCAT exams in 1994 and started medical school in 1995. Basically, my mother's question was asked at the right time in my life, and it suddenly made perfect sense."</p>
+                        </div>
                     </div>
                 </div>
 
